Updated text description

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <div class="row">
       <div class="col-md-12">
         <h2>About Me</h2>
-        <p>Hi! I'm Justin Lam, and this is my portfolio. I'm a grade 12 student studying at Bayview Secondary School in Ontario, Canada. My projected grade average for this year is 94%. In addition to the computer science course I am currently enrolled in,
-          I spend my spare time learning full-stack development. Follow my progress on <a href="https://www.freecodecamp.com/just-n">Free Code Camp</a>!</p>
+        <p>Hi! I'm Justin Lam, and this is my portfolio. I'm a grade 12 student studying at Bayview Secondary School in Ontario, Canada. My projected grade average for this year is 96%. In addition to the computer science course I am currently enrolled in,
+          I spend my spare time learning full-stack web development. Follow my progress on <a href="https://www.freecodecamp.com/just-n">Free Code Camp</a>!</p>
 
         <p>In my next four years at university, I hope to study in preparation for a career in computer science and finance. My ultimate career goal is to land a job at a top tech company at Silicon Valley so I can directly contribute to the projects that
           are shaping the future of technology. I would also like to work on the finance-side of companies because of my interest in capital markets.</p>
