Added Random Quote Generator project

--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@
 <section id="projects" class="projects text-center">
   <h2>My Projects</h2>
   <div class="container">
+
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-responsive" src="http://tinyimg.io/i/Zko1VuM.PNG" alt="Random Quote Generator">
+      </div>
+      <div class="col-md-8">
+        <h3>Random Quote Generator <a href="https://codepen.io/justinlam/pen/LymaoV/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h5>May 14, 2017</h5>
+        <p>A web application that fetches and displays random quotes using the QuotesOnDesign API. Users can Tweet the quote using an integrated button.</p>
+        <div style="font-size: 24px">
+          <i class="devicon-html5-plain"></i>
+          <i class="devicon-css3-plain"></i>
+		  <i class="devicon-javascript-plain"></i>
+		  <i class="devicon-jquery-plain"></i>
+        </div>
+      </div>
+    </div>
+  <hr>
     <div class="row">
       <div class="col-md-4">
         <img class="img-responsive" src="http://tinyimg.io/i/EFKs9tH.PNG" alt="Personal Portfolio">
@@ -149,6 +167,8 @@
         </div>
       </div>
     </div>
+	
+	
   </div>
 </section>
 
