--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <div class="row">
       <div class="col-md-4">
-        <img class="img-responsive" src="http://tinyimg.io/i/Zko1VuM.PNG" alt="Random Quote Generator">
+        <img class="img-responsive" src="http://tinyimg.io/i/MTmGeOX.PNG" alt="Random Quote Generator">
       </div>
       <div class="col-md-8">
         <h3>Random Quote Generator <a href="https://codepen.io/justinlam/pen/LymaoV/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
@@ -177,7 +177,7 @@
     <div class="test">
       <img src="http://tinyimg.io/i/DnNkrYR.png"><a href="mailto:justin.lam640@gmail.com">justin.lam640@gmail.com</a><br>
       <img src="http://tinyimg.io/i/gyCyzKI.png"><a href="http://www.linkedin.com/in/justinlam1" target="_blank">linkedin.com/in/justinlam1</a><br>
-      <img src="http://tinyimg.io/i/md3htmk.png"><a href="https://github.com/just-n" target="_blank">github.com/just-n</a><br>
+      <img src="http://tinyimg.io/i/md3htmk.png"><a href="https://github.com/justinlam1" target="_blank">github.com/justinlam1</a><br>
       <img src="http://tinyimg.io/i/SWDxlPP.png"><a href="https://codepen.io/justinlam/" target="_blank">codepen.io/justinlam/</a><br>
     </div>
 
