Updated Github links

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <img class="img-responsive" src="http://tinyimg.io/i/n3jYqSY.PNG" alt="Sketchpad">
       </div>
       <div class="col-md-8">
-        <h3>Sketchpad <a href="https://github.com/just-n/sketchpad" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h3>Sketchpad <a href="https://github.com/justinlam1/sketchpad" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
         <h5>July 28, 2016</h5>
         <p>An application that allows the user to select between three patterns and draw on a variable size sketchpad; part of The Odin Project curriculum</p>
         <div style="font-size: 24px">
@@ -158,7 +158,7 @@
         <img class="img-responsive" src="http://tinyimg.io/i/h9odY52.PNG" alt="Google Homepage Clone">
       </div>
       <div class="col-md-8">
-        <h3>Google Homepage Visual Clone <a href="https://github.com/just-n/google-homepage" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h3>Google Homepage Visual Clone <a href="https://github.com/justinlam1/google-homepage" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
         <h5>October 31, 2015</h5>
         <p>A visual clone of the Google Search homepage, with working buttons and text field; part of The Odin Project curriculum</p>
         <div style="font-size: 24px">
