Added Local Weather project

--- a/index.html
+++ b/index.html
@@ -86,13 +86,29 @@
 <section id="projects" class="projects text-center">
   <h2>My Projects</h2>
   <div class="container">
-
+	<div class="row">
+      <div class="col-md-4">
+        <img class="img-responsive" src="http://tinyimg.io/i/G1WvbRk.PNG" alt="Local Weather Application">
+      </div>
+      <div class="col-md-8">
+        <h3>Local Weather Application <a href="https://codepen.io/justinlam/full/zwaqbR/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h5>May 21, 2017</h5>
+        <p>A web application that fetches and displays the local weather. A toggle allows users to switch between Celsius and Farenheit.</p>
+        <div style="font-size: 24px">
+          <i class="devicon-html5-plain"></i>
+          <i class="devicon-css3-plain"></i>
+		  <i class="devicon-javascript-plain"></i>
+		  <i class="devicon-jquery-plain"></i>
+        </div>
+      </div>
+    </div>
+  <hr>
     <div class="row">
       <div class="col-md-4">
         <img class="img-responsive" src="http://tinyimg.io/i/MTmGeOX.PNG" alt="Random Quote Generator">
       </div>
       <div class="col-md-8">
-        <h3>Random Quote Generator <a href="https://codepen.io/justinlam/pen/LymaoV/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h3>Random Quote Generator <a href="https://codepen.io/justinlam/full/LymaoV/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
         <h5>May 14, 2017</h5>
         <p>A web application that fetches and displays random quotes using the QuotesOnDesign API. Users can Tweet the quote using an integrated button.</p>
         <div style="font-size: 24px">
@@ -109,7 +125,7 @@
         <img class="img-responsive" src="http://tinyimg.io/i/EFKs9tH.PNG" alt="Personal Portfolio">
       </div>
       <div class="col-md-8">
-        <h3>Personal Portfolio <a href="http://codepen.io/justinlam/pen/OWVgPp/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h3>Personal Portfolio <a href="http://codepen.io/justinlam/full/OWVgPp/" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
         <h5>January 7, 2017</h5>
         <p>The portfolio on this page was built from scratch using HTML, CSS, and the Bootstrap framework.</p>
         <div style="font-size: 24px">
@@ -125,7 +141,7 @@
         <img class="img-responsive" src="http://tinyimg.io/i/SBHT8dI.PNG" alt="Tribute Page">
       </div>
       <div class="col-md-8">
-        <h3>Tribute Page <a href="https://codepen.io/justinlam/pen/EZjgvW" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
+        <h3>Tribute Page <a href="https://codepen.io/justinlam/full/EZjgvW" target="_blank"><img id="linkicon" src="http://tinyimg.io/i/ewvm7IR.png"></a></h3>
         <h5>January 5, 2017</h5>
         <p>An information page of Elon Musk built with Bootstrap; part of Free Code Camp</p>
         <div style="font-size: 24px">
